# tui-bitbucket-dashboard

./: Cargo.toml
src/: bitbucket.rs  event.rs  main.rs  utils.rs
