[package]
name = "tui-pr"
version = "0.1.0"
authors = ["snpefk <snpefk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
data-encoding = "2.2.1"
serde_json = "1.0.55"

tui = "0.9"
termion = "1.5"